svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service 
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: nginx
